# stack-ghci-i

./: README.md  stack.yaml
alib/: Lib.hs  alib.cabal
buggy/: Main.hs  buggy.cabal
working/: working.cabal
