name:                working
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable working
  hs-source-dirs:      . extra
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010
  other-modules:       Bar
